--- a/PaginaConfig.html
+++ b/PaginaConfig.html
@@ -15,7 +15,7 @@
         <div class="text-container">
 
             <p onclick="voltarPaginaInicial()">Inicio</p>
-            <p>Anuciar Produto</p>
+            <p onclick="irPaginaAnuncio()">Anunciar Produto</p>
             <p>Categoria</p>
             <p>Favoritos</p>
  
