--- a/PaginaMinhaConta.html
+++ b/PaginaMinhaConta.html
@@ -13,7 +13,7 @@
         <div class="text-container">
 
             <p onclick="voltarPaginaInicial()">Inicio</p>
-            <p>Anuciar Produto</p>
+            <p onclick="irPaginaAnuncio()">Anunciar Produto</p>
             <p>Categoria</p>
             <p>Favoritos</p>
  
@@ -38,10 +38,11 @@
             <img src="" alt="">
         </div>
     </header>
+  
     <div class="count" id="count">
     </div>
 
-        <img id="back" src="assets/entypo--back.png" alt="back.png" onclick="voltarPaginaConfig()"> 
+    <button id="back" onclick="voltarPaginaInicial()">Voltar para Inicio</button>
 
     <script src="script.js"></script>
 </body>
