--- a/PaginaInicial.html
+++ b/PaginaInicial.html
@@ -16,7 +16,7 @@
         <div class="text-container">
 
             <p onclick="voltarPaginaInicial()">Inicio</p>
-            <p>Anuciar Produto</p>
+            <p onclick="irPaginaAnuncio()">Anunciar Produto</p>
             <p>Categoria</p>
             <p>Favoritos</p>
  
@@ -44,8 +44,7 @@
     </header>
 
     <main>
-        <div class="grid-container">
-
+        <div class="grid-container" onclick="mostraCards()">
         </div>
     </main>
     <footer>
